# E-Bill

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  docker-compose.yml  justfile  rust-analyzer.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: qodana_code_quality.yml  rust.yml  test.yml
bootstrap/: bootstrap_nodes.json
docs/: configuration.md  index.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.js  index.scss
frontend/src/components/elements/: BillDetails.jsx
frontend/src/components/pages/: AcceptPage.jsx  Bill.jsx  CheckMintPage.jsx  EndorsePage.jsx  FindBill.jsx  HomePage.jsx  IdentityPage.jsx  MintPage.jsx  Quote.jsx  RepayPage.jsx  ReqAcceptPage.jsx  ReqPaymentPage.jsx  SellPage.jsx  SettingPage.jsx
frontend/src/components/popups/: SingleBillDetail.jsx
frontend/src/components/sections/: HomeHeader.jsx  IssueForm.jsx
frontend/src/context/: MainContext.jsx
src/: api.rs  blockchain.rs  config.rs  constants.rs  dht.rs  error.rs  main.rs  test.rs  web.rs  work_with_mint.rs
src/bill/: contacts.rs  identity.rs  mod.rs  quotes.rs
src/blockchain/: block.rs  chain.rs  mod.rs
src/blockchain/bill/: block.rs  chain.rs  mod.rs
src/blockchain/company/: mod.rs
src/blockchain/identity/: mod.rs
src/dht/: behaviour.rs  client.rs  event_loop.rs  mod.rs  network.rs
src/job/: mod.rs
src/mint/: mod.rs
src/persistence/: backup.rs  bill.rs  company.rs  contact.rs  file_upload.rs  identity.rs  identity_chain.rs  mod.rs  nostr.rs  notification.rs
src/persistence/db/: backup.rs  bill.rs  bill_chain.rs  company.rs  company_chain.rs  contact.rs  identity.rs  identity_chain.rs  mod.rs  nostr_event_offset.rs  notification.rs
src/service/: backup_service.rs  bill_service.rs  company_service.rs  contact_service.rs  file_upload_service.rs  identity_service.rs  mod.rs  search_service.rs
src/service/notification_service/: bill_action_event_handler.rs  default_service.rs  email.rs  email_lettre.rs  email_sendgrid.rs  event.rs  handler.rs  mod.rs  nostr.rs  push_notification.rs  test_utils.rs  transport.rs
src/tests/: mod.rs
src/util/: crypto.rs  currency.rs  date.rs  file.rs  mod.rs  numbers_to_words.rs  rsa.rs  terminal.rs
src/web/: api_docs.rs  data.rs  handlers.rs  middleware.rs  mod.rs
src/web/handlers/: bill.rs  contacts.rs  identity.rs  middleware.rs  mod.rs  notifications.rs  quotes.rs
src/web/handlers/company/: data.rs  mod.rs
src/web/requests/: bill.http  contacts.http  general.http  http-client.env.json  identity.http  notifications.http
test/: keys  peer_id
