[package]
name = "bitcredit"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
openssl = "0.10.68"
borsh = "1.5.1"
borsh-derive = "1.0.0"
env_logger = "0.11.5"
chrono = "0.4.38"
libp2p = { version = "0.51.3", features = [
  "tcp",
  "dns",
  "async-std",
  "noise",
  "yamux",
  "tokio",
  "macros",
  "kad",
  "request-response",
  "identify",
  "gossipsub",
  "relay",
  "dcutr",
] }
tokio = { version = "1.40.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "io-std",
] }
async-trait = "0.1.83"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
open = "5.3.0"
serde_json = "1.0.129"
serde = { version = "1.0.210", features = ["derive"] }
hex = "0.4.3"
log = "0.4.22"
futures = "0.3.31"
bitcoin = { version = "0.32.3", features = ["rand", "rand-std"] }
reqwest = { version = "0.12.8", features = ["json"] }
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "env"] }
url = "2.5.2"
thiserror = "2"
moksha-core = { git = "https://github.com/mtbitcr/moksha" }
moksha-mint = { git = "https://github.com/mtbitcr/moksha" }
moksha-wallet = { git = "https://github.com/mtbitcr/moksha" }
hf = { version = "0.3.6", default-features = false }
lettre = { version = "0.11.10", features = [
  "tokio1",
  "tokio1-native-tls",
  "file-transport",
] }

[dev-dependencies]
mockall = "0.13.0"
