[package]
name = "bitcredit"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
borsh = "1.5.1"
borsh-derive = "1.0.0"
env_logger = "0.11.5"
chrono = "0.4.38"
libp2p = { version = "0.51.4", features = [
  "tcp",
  "dns",
  "async-std",
  "noise",
  "yamux",
  "tokio",
  "macros",
  "kad",
  "request-response",
  "identify",
  "gossipsub",
  "relay",
  "dcutr",
  "secp256k1",
] }
tokio = { version = "1.40.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "io-std",
  "fs",
] }
async-trait = "0.1.83"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
open = "5.3.0"
serde_json = "1.0.129"
serde = { version = "1.0.210", features = ["derive"] }
serde_repr = "0.1.19"
log = "0.4.22"
futures = "0.3.31"
bitcoin = { version = "0.32.3", features = ["rand", "rand-std"] }
reqwest = { version = "0.12.8", features = ["json"] }
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "env"] }
url = "2.5.2"
thiserror = "2"
moksha-core = { git = "https://github.com/mtbitcr/moksha" }
moksha-mint = { git = "https://github.com/mtbitcr/moksha" }
moksha-wallet = { git = "https://github.com/mtbitcr/moksha" }
hf = { version = "0.3.6", default-features = false }
lettre = { version = "0.11.10", features = [
  "tokio1",
  "tokio1-native-tls",
  "file-transport",
] }
nostr-sdk = { version = "0.38.0", features = ["nip59"] }
uuid = { version = "1.11.0", features = ["v4"] }
infer = { version = "0.16", default-features = false }
surrealdb = "2"
lazy_static = "1.5.0"
bs58 = "0.5.1"
utoipa = { version = "5", features = ["rocket_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["rocket", "vendored"] }
ecies = { version = "0.2", features = ["std"] }
bip39 = { version = "2.1.0", features = ["rand"] }
hex = "0.4.3"

[dev-dependencies]
mockall = "0.13.0"
nostr-relay-builder = "0.38.0"
surrealdb = { version = "2", features = ["kv-mem"] }

[features]
embedded-db = ["surrealdb/kv-rocksdb"]
